--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -59,8 +59,8 @@ jobs:
   run-build-upload:
     needs: version-check
     uses: ./.github/workflows/_Wheels.yml
-    secrets:
-      TESTPYPI_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
+#    secrets:
+#      TESTPYPI_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
 
   trigger-windows-pyinstaller:
     needs: run-build-upload
@@ -97,8 +97,8 @@ jobs:
   upload-pypi:
     needs: tag-release
     uses: ./.github/workflows/_PyPI.yml
-    secrets:
-      PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+#    secrets:
+#      PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
 
 
 
