--- a/.github/workflows/_PyPI.yml
+++ b/.github/workflows/_PyPI.yml
@@ -3,9 +3,9 @@ name: _Upload to PyPI
 
 on:
   workflow_call:
-    secrets:
-      PYPI_PASSWORD:
-        required: true
+#    secrets:
+#      PYPI_PASSWORD:
+#        required: true
 
 jobs:
   upload_to_pypi:
