to check LocalWindowsInstaller.yml

--- a/.github/workflows/LocalWindowsInstaller.yml
+++ b/.github/workflows/LocalWindowsInstaller.yml
@@ -197,8 +197,6 @@ jobs:
 
       - name: Run PyMcaMain with tests (Windows)
         shell: pwsh
-        env:
-          PYMCA_TEST_MODE: 1
         run: |
           # Define expected install paths
           $basePaths = @(
@@ -228,7 +226,7 @@ jobs:
       
           Write-Host "Found executable at $appPath"
           
-          & $appPath
+          & $appPath --test
           exit $LASTEXITCODE
 
       - name: Upload artifacts
