remove "--no-build-isolation" and upload app (instead of dmg) just for test

--- a/.github/workflows/LocalWindowsInstaller.yml
+++ b/.github/workflows/LocalWindowsInstaller.yml
@@ -154,7 +154,7 @@ jobs:
           pip install hdf5plugin
           pip install silx
           pip install PyOpenGL
-          pip install --no-build-isolation git+https://github.com/vasole/bcflight.git
+          pip install git+https://github.com/vasole/bcflight.git
 
       - name: Install NSIS
         run: choco install nsis -y
