--- a/.github/workflows/_MacOS.yml
+++ b/.github/workflows/_MacOS.yml
@@ -61,7 +61,7 @@ jobs:
           pip install Cython
           pip install wheel
           pip install wheels/*cp312*.whl
-          pip install --no-build-isolation git+https://github.com/vasole/bcflight.git
+          pip install git+https://github.com/vasole/bcflight.git
           pip install ipywidgets
 
       - name: Build the application for arm64
@@ -157,7 +157,7 @@ jobs:
           arch -x86_64 pip install Cython
           arch -x86_64 pip install wheel
           arch -x86_64 pip install wheels/*cp312*.whl
-          arch -x86_64 pip install --no-build-isolation git+https://github.com/vasole/bcflight.git
+          arch -x86_64 pip install git+https://github.com/vasole/bcflight.git
           arch -x86_64 pip install ipywidgets
 
       #          arch -x86_64 pip install PySide6==6.6.0
@@ -364,7 +364,7 @@ jobs:
       - name: Upload universal .app artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.APP_NAME }}-universal-app
+          name: macos-universal2-app
           path: dist/universal2/*
           retention-days: 1
 
