cehck if DMG works without secrets

--- a/.github/workflows/_MacOS.yml
+++ b/.github/workflows/_MacOS.yml
@@ -373,70 +373,70 @@ jobs:
           APP_BASE_NAME="${APP_NAME%.app}"
           echo "APP_BASE_NAME=$APP_BASE_NAME" >> $GITHUB_ENV
 
-#      - name: Sign, create, and staple the universal2 DMG
-#        env:
-#          APPLE_ID: ${{ secrets.APPLE_ID }}
-#          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-#          CERTIFICATE_PASSWORD: ${{ secrets.APPLE_DEVELOPER_ID_APPLICATION_CERTIFICATE_PASSWORD }}
-#          CERTIFICATE_BASE64: ${{ secrets.APPLE_DEVELOPER_ID_APPLICATION_CERTIFICATE_BASE64 }}
-#          KEYCHAIN_PASSWORD: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
-#          APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APPLICATION_SPECIFIC_PASSWORD }}
-#        run: |
-#          # Copy the application to location expected by the packaging scripts.
-#          mkdir -p package/pyinstaller/dist
-#          cp -a dist/universal2/$APP_NAME package/pyinstaller/dist/PyMca.app
-#          cd package/pyinstaller
-#          # Remove unnecessary packages.
-#          rm -fr dist/PyMca.app/Contents/Frameworks/pkg_resources/tests
-#          mkdir -p artifacts
-#          ./codesign.sh
-#          ./create-dmg.sh
-#          ./notarize.sh
-#          VERSION=${APP_NAME#PyMca}; VERSION=${VERSION%.app}
-#          mv artifacts/PyMca.dmg ../../dist/PyMca${VERSION}.dmg
-#          cd ../..
-#          rm -fr package/pyinstaller/dist
-#          rm -fr package/pyinstaller/artifacts
-#
-#      - name: Mount the DMG
-#        run: |
-#          set -e
-#          DMG_NAME="${{ env.APP_BASE_NAME }}.dmg"
-#          MOUNT_POINT="/Volumes/${{ env.APP_BASE_NAME }}"
-#
-#          echo "Mounting DMG $DMG_NAME at $MOUNT_POINT"
-#          hdiutil attach "dist/$DMG_NAME" -mountpoint "$MOUNT_POINT"
-#
-#      - name: Copy .app to /Applications
-#        run: |
-#          set -e
-#          APP_PATH="/Volumes/${{ env.APP_BASE_NAME }}/${{ env.APP_NAME }}"
-#          sudo cp -R "$APP_PATH" /Applications/
-#
-#      - name: Make main binary executable
-#        run: chmod +x /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain
-#
-#      - name: Run the x86_64 tests
-#        run: |
-#          set -e
-#          arch -x86_64 /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain --test
-#
-#      - name: Run the arm64 tests
-#        run: |
-#          set -e
-#          arch -arm64 /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain --test
-#
-#      - name: Unmount the DMG
-#        if: always()
-#        run: |
-#          set -e
-#          MOUNT_POINT="/Volumes/${{ env.APP_BASE_NAME }}"
-#          echo "Unmounting DMG at $MOUNT_POINT"
-#          hdiutil detach "$MOUNT_POINT"
-#
-#      - name: Upload the universal2 DMG artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: macos-universal2-dmg
-#          path: dist/*.dmg
-#          retention-days: 1
+      - name: Sign, create, and staple the universal2 DMG
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          CERTIFICATE_PASSWORD: ${{ secrets.APPLE_DEVELOPER_ID_APPLICATION_CERTIFICATE_PASSWORD }}
+          CERTIFICATE_BASE64: ${{ secrets.APPLE_DEVELOPER_ID_APPLICATION_CERTIFICATE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
+          APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APPLICATION_SPECIFIC_PASSWORD }}
+        run: |
+          # Copy the application to location expected by the packaging scripts.
+          mkdir -p package/pyinstaller/dist
+          cp -a dist/universal2/$APP_NAME package/pyinstaller/dist/PyMca.app
+          cd package/pyinstaller
+          # Remove unnecessary packages.
+          rm -fr dist/PyMca.app/Contents/Frameworks/pkg_resources/tests
+          mkdir -p artifacts
+          ./codesign.sh
+          ./create-dmg.sh
+          ./notarize.sh
+          VERSION=${APP_NAME#PyMca}; VERSION=${VERSION%.app}
+          mv artifacts/PyMca.dmg ../../dist/PyMca${VERSION}.dmg
+          cd ../..
+          rm -fr package/pyinstaller/dist
+          rm -fr package/pyinstaller/artifacts
+
+      - name: Mount the DMG
+        run: |
+          set -e
+          DMG_NAME="${{ env.APP_BASE_NAME }}.dmg"
+          MOUNT_POINT="/Volumes/${{ env.APP_BASE_NAME }}"
+
+          echo "Mounting DMG $DMG_NAME at $MOUNT_POINT"
+          hdiutil attach "dist/$DMG_NAME" -mountpoint "$MOUNT_POINT"
+
+      - name: Copy .app to /Applications
+        run: |
+          set -e
+          APP_PATH="/Volumes/${{ env.APP_BASE_NAME }}/${{ env.APP_NAME }}"
+          sudo cp -R "$APP_PATH" /Applications/
+
+      - name: Make main binary executable
+        run: chmod +x /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain
+
+      - name: Run the x86_64 tests
+        run: |
+          set -e
+          arch -x86_64 /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain --test
+
+      - name: Run the arm64 tests
+        run: |
+          set -e
+          arch -arm64 /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain --test
+
+      - name: Unmount the DMG
+        if: always()
+        run: |
+          set -e
+          MOUNT_POINT="/Volumes/${{ env.APP_BASE_NAME }}"
+          echo "Unmounting DMG at $MOUNT_POINT"
+          hdiutil detach "$MOUNT_POINT"
+
+      - name: Upload the universal2 DMG artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-universal2-dmg
+          path: dist/*.dmg
+          retention-days: 1
