--- a/.github/workflows/_UploadRelease.yml
+++ b/.github/workflows/_UploadRelease.yml
@@ -24,14 +24,14 @@ jobs:
         run: |
           cd dist
           old_file=$(ls pymca5-*.tar.gz)
-          new_file=$(echo "$old_file" | sed 's/^pymca5-/pymca/' | sed 's/\.tar\.gz$/.src.tgz/')
+          new_file=$(echo "$old_file" | sed 's/^pymca5-/pymca/' | sed 's/\.tar\.gz$/-src.tgz/')
           mv "$old_file" "$new_file"
           echo "Renamed $old_file → $new_file"
 
       - name: Download the macOS universal2 artifact
         uses: actions/download-artifact@v4
         with:
-          name: macos-universal2-app
+          name: macos-universal2-dmg
           path: dist
 
       - name: Download Windows artifact
