--- a/.github/workflows/_Wheels.yml
+++ b/.github/workflows/_Wheels.yml
@@ -3,9 +3,9 @@ name: _Create and upload wheels
 on:
   workflow_dispatch:
   workflow_call:
-#    secrets:
-#      TESTPYPI_PASSWORD:
-#        required: true
+    secrets:
+      TESTPYPI_PASSWORD:
+        required: true
 
 env:
   PROJECT: PyMca5
@@ -349,12 +349,13 @@ jobs:
         run: |
           find dist -type f \( -name '*.whl' -o -name '*.tar.gz' \)
 
-#      - name: Upload wheels to TestPyPI
-#        env:
-#          TWINE_USERNAME: __token__
-#          TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
-#        run: |
-#          files=$(find dist -type f \( -name '*.whl' -o -name '*.tar.gz' \))
-#          echo "Uploading files:"
-#          echo "$files"
-#          python -m twine upload --verbose --repository testpypi $files
+      - name: Upload wheels to TestPyPI
+        if: secrets.TESTPYPI_PASSWORD != ''
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
+        run: |
+          files=$(find dist -type f \( -name '*.whl' -o -name '*.tar.gz' \))
+          echo "Uploading files:"
+          echo "$files"
+          python -m twine upload --verbose --repository testpypi $files
