inputs instaead of secrets in "if" statements

--- a/.github/workflows/_PyPI.yml
+++ b/.github/workflows/_PyPI.yml
@@ -41,7 +41,7 @@ jobs:
           python -m pip install --upgrade twine
 
       - name: Upload to PyPI
-        if: secrets.PYPI_PASSWORD != ''
+        if: ${{ inputs.PYPI_PASSWORD != '' }}
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
