--- a/.github/workflows/_Version.yml
+++ b/.github/workflows/_Version.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   check-version-exists:
     runs-on: ubuntu-latest
+    if: ${{ inputs.skipper != 'local' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
