define inputs in _Version

--- a/.github/workflows/_Version.yml
+++ b/.github/workflows/_Version.yml
@@ -1,8 +1,11 @@
 name: _Check version
 
 on:
-  workflow_dispatch:
   workflow_call:
+    inputs:
+      skipper:
+        type: string
+        required: false
 
 env:
   PROJECT: PyMca5
