change path since new dmg have no version in name

--- a/.github/workflows/_MacOS.yml
+++ b/.github/workflows/_MacOS.yml
@@ -414,17 +414,17 @@ jobs:
           sudo cp -R "$APP_PATH" /Applications/
 
       - name: Make main binary executable
-        run: chmod +x /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain
+        run: chmod +x /Applications/PyMca.app/Contents/MacOS/PyMcaMain
 
       - name: Run the x86_64 tests
         run: |
           set -e
-          arch -x86_64 /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain --test
+          arch -x86_64 /Applications/PyMca.app/Contents/MacOS/PyMcaMain --test
 
       - name: Run the arm64 tests
         run: |
           set -e
-          arch -arm64 /Applications/${{ env.APP_NAME }}/Contents/MacOS/PyMcaMain --test
+          arch -arm64 /Applications/PyMca.app/Contents/MacOS/PyMcaMain --test
 
       - name: Unmount the DMG
         if: always()
