No more upload to testPyPI. Upload to PyPI is waiting everything else to finish

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -114,7 +114,9 @@ jobs:
     uses: ./.github/workflows/_UploadRelease.yml
 
   upload-pypi:
-    needs: tag-release
+    needs:
+      - changelog
+      - upload-release
     uses: ./.github/workflows/_PyPI.yml
     secrets:
       PYPI_PASSWORD: ${{ github.event.inputs.mode != 'dry-run' && secrets.PYPI_PASSWORD || '' }}
