Fix upload to PyPI. One not able to check if secret is empty - no need since upload to PyPI could happens only after tag.

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -117,4 +117,4 @@ jobs:
       - upload-release
     uses: ./.github/workflows/_PyPI.yml
     secrets:
-      PYPI_PASSWORD: ${{ github.event.inputs.mode != 'dry-run' && secrets.PYPI_PASSWORD || '' }}
+      PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
